22 may 2020 v320: Map: Added new crash button. Fixed: Error when clicking New crash button before user data was loaded. Tarantula is now aligned to top. It could fall out the view before. Fixed: Deleting an article often showed an error message. Fixed: Deleting a crash often showed an error message.

--- a/main.css
+++ b/main.css
@@ -936,7 +936,8 @@ a:hover {
   right:           0;
   bottom:          0;
   background:      #ffffff;
-  justify-content: center;
+  justify-content: flex-start;
+  padding-top:     20px;
   align-items:     center;
   flex-direction:  column;
 }
